[package]
name = "drawbridge-ingress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.65.0", features = ["runtime","derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_21"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1"
hyper = { version = "0.14", features = ["full"] }
unicase = "2.6.0"
httparse = "1.5.1"